--- a/Front/pages/registro.html
+++ b/Front/pages/registro.html
@@ -55,7 +55,7 @@
         Ingresar nueva Contraseña:
         <input type="text" placeholder="********" />
       </p>
-      <button style="background:rgba(2, 180, 73, 0.8)">Enviar</button>
+      <button style="background:#02b449cc">Enviar</button>
 </div>
         
       </div>
@@ -69,3 +69,5 @@
     <script src="/scripts/expandibles.js"></script>
   </body>
 </html>
+<em></em>
+<br>
