--- a/Front-end/public/index.html
+++ b/Front-end/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A Wizard's Cauldron proyect"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="apple-touch-icon" href="Logo.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Site Cauldron</title>
   </head>
