--- a/Front-end/public/index.html
+++ b/Front-end/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/Logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="red" />
-    <meta
-      name="description"
-      content="A Wizard's Cauldron proyect"
-    />
+    <meta name="description" content="A Wizard's Cauldron Service" />
     <link rel="apple-touch-icon" href="Logo.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Site Cauldron</title>
